--- a/_dev/_ejs/inquiry/index.ejs
+++ b/_dev/_ejs/inquiry/index.ejs
@@ -60,15 +60,15 @@ $meta.description = 'ディスクリプション';
                   <p>
                      Donatelloの培ったスキルで、プロジェクトの成功、改善をバックアップいたします。<br>
                      まずはお気軽にお問い合わせくださいませ。
-
                   </p>
-
                   <div class="toEntry">
-                     <%- include( $path + '_inc/_page-enterButton', {text: 'お問合わせはこちら'}) %> 
-                     <aside class="toEntry_attention">
-                        メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
-                        いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
-                     </aside>    
+                     <div class="wrap">
+                        <%- include( $path + '_inc/_page-enterButton', {text: 'お問合わせはこちら'}) %> 
+                        <aside class="toEntry_attention">
+                           メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
+                           いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
+                        </aside>
+                     </div>
                   </div>
                </div>
             </article>
