--- a/_dev/_ejs/works/index.ejs
+++ b/_dev/_ejs/works/index.ejs
@@ -9,16 +9,16 @@
 <%
 $path = '../';
 $active = 'works';
-$css = null;
-$scripts_global=null;
+$css = [ $path + 'common/js/slick/slick-theme.css', $path + 'common/js/slick/slick.css'];
+$scripts_global=[ $path + 'common/js/slick/slick.min.js'];
 $scripts=null;
 $meta.title = 'WORKS 実績 | Donatello 東京のSES、システム開発、エンジニア育成';
 $meta.description = 'ディスクリプション';
 %>
 <head>
-  <%- include($path + '_inc/_head') %>
+ <%- include($path + '_inc/_head') %>
 </head>
-<body class="inquiry">
+<body class="works">
    <%# $parts.loadingAnim %>   
    <!-- ***** header  -->
    <%- include( $path + '_inc/_gnav', {isChild: true}) %>
@@ -29,15 +29,15 @@ $meta.description = 'ディスクリプション';
       <!-- ///// mainvisual  -->    
       <!-- ***** BODY START -->
       <main class="main">
-         <!-- *** about -->
+         <!-- *** works -->
          <section id="supported" class="section -works">
-            <nav class="worksNav">
+            <nav class="worksNav -top">
                <ul class="wrap">
                   <li class="worksNav_tab" data-tab="ses">
                      <header class="worksNav_tab_en">SES</header>
                      <div class="worksNav_tab_ja">システムエンジニアリングサービス</div>
                   </li>
-                   <li class="worksNav_tab" data-tab="development">
+                  <li class="worksNav_tab" data-tab="development">
                      <header class="worksNav_tab_en">DEVELOPMENT</header>
                      <div class="worksNav_tab_ja">受託システム開発</div>
                   </li>                  
@@ -45,63 +45,292 @@ $meta.description = 'ディスクリプション';
                      <header class="worksNav_tab_en">WEBSITE</header>
                      <div class="worksNav_tab_ja">ウェブサイト制作</div>
                   </li>
-                   <li class="worksNav_tab" data-tab="line">
+                  <li class="worksNav_tab" data-tab="line">
                      <header class="worksNav_tab_en">LINE ACCESSORY</header>
                      <div class="worksNav_tab_ja">ライン着せ替え</div>
                   </li>                  
                </ul>
             </nav>
-            <article>
-               <header class="section_index">
-                <h3>
-                  <span class="section_index_en">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="430px" height="30px" text-anchor="middle" viewBox="0 0 430 30">
-                        <linearGradient id="gradation"><stop offset="0" stop-color="#0C3FFF"></stop><stop offset="1" stop-color="#8BFFAC"></stop></linearGradient><text x="215" y="23" fill="url(#gradation)">"DEVELOP FOR THE FUTURE."</text></svg>
-                  </span>                     
-               </h3>
-               </header>
-               <div class="section_content wrap">
-                  <p class="intro">
-                     <strong>私たち、株式会社Donatelloは、<br>
-                        お客様の業務を分析し、受託システム開発、SESを通じ<br>
-                        業務効率化・属人的ミスを軽減するための最適なシステムを提案いたします。</strong>
-                  </p>
-                  <p>
-                     「新規ビジネスにどうしてもシステム開発が必要…でも、発注先に困っている」<br>
-                     「人手が足りなくて、開発スピードが遅い」<br>
-                  「業務の効率化にこんなアイデアがある！けれど、エンジニアが社内にいない…」</p>
-                  <p>このメッセージをご覧の御社のような先進的なテクノロジーや、<br>あなたのイメージする、人々を豊かにするアイディア。<br>プロジェクトが動いている、また、新しいものが産まれる現場に、よくある事態です。</p>
-                  <p>そんなとき、私たちが力になります。</p>
-                  <p>10年以上のシステム開発経験を持つDonatelloが、<br>現場にイノベーションのキーを提供します。     
-                  </p>
-                  <p>
-                     受託開発、エンジニア育成、マネージメント。
-                  </p>
-                  <p>
-                     Donatelloの培ったスキルで、プロジェクトの成功、改善をバックアップいたします。<br>
-                     まずはお気軽にお問い合わせくださいませ。
+            <section class="worksContents">
+               <section id="ses" class="worksContent">
+                 <div class="wrap">
+                    <header class="worksContent_index">
+                     <h3>
+                        <span class="worksContent_index_en">
+                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="400px" height="30px" text-anchor="middle" viewBox="0 0 400 30">
+                           <linearGradient id="gradation"><stop offset="0" stop-color="#0C3FFF"></stop><stop offset="1" stop-color="#8BFFAC"></stop></linearGradient><text x="200" y="23" fill="url(#gradation)">SES</text></svg>
+                        </span>
+                        <span class="worksContent_index_ja">
+                           システムエンジニアリングサービス
+                        </span>
+                     </h3>
+                  </header>
+                  <div class="worksContent_content">
+                     <ul class="work">
+                        <li class="work_detail">
+                           <div class="work_detail_icon">
+                              <img src="<%- $path %>common/img/icon-dev.svg" width="100" alt=""> 
+                           </div>
+                           <h3 class="work_detail_ja">
+                              官公庁向けシステム開発
+                           </h3>
+                           <article class="work_detail_content">
+                              テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                           </article>
+                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                              <button role="link" >
+                                 COMING SOON
+                              </button>
+                           </a>
+                        </li>
+                        <li class="work_detail">
+                           <div class="work_detail_icon">
+                              <img src="<%- $path %>common/img/icon-website.svg" width="100" alt=""> 
+                           </div>
+                           <h3 class="work_detail_ja">
+                              ポータルサイト運営
+                           </h3>
+                           <article class="work_detail_content">
+                              テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                           </article>
+                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                              <button role="link" >
+                                 COMING SOON
+                              </button>
+                           </a>
+                        </li>
+                        <li class="work_detail">
+                           <div class="work_detail_icon">
+                              <img src="<%- $path %>common/img/icon-dev.svg" width="100" alt=""> 
+                           </div>
+                           <h3 class="work_detail_ja">
+                              受注サポートシステム
+                           </h3>
+                           <article class="work_detail_content">
+                              テキストご支給テキストご支給テキストご支給テキストご支給テキスト
+                           </article>
+                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                              <button role="link" >
+                                 COMING SOON
+                              </button>
+                           </a>
+                        </li>
+                     </ul>                     
 
-                  </p>
-
-                  <div class="toEntry">
-                     <%- include( $path + '_inc/_page-enterButton', {text: 'お問合わせはこちら'}) %> 
-                     <aside class="toEntry_attention">
-                        メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
-                        いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
-                     </aside>    
                   </div>
                </div>
-            </article>
+            </section>
+            <section id="development" class="worksContent">
+              <div class="wrap">
+                 <header class="worksContent_index">
+                  <h3>
+                     <span class="worksContent_index_en">
+                      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="400px" height="30px" text-anchor="middle" viewBox="0 0 400 30">
+                        <linearGradient id="gradation"><stop offset="0" stop-color="#0C3FFF"></stop><stop offset="1" stop-color="#8BFFAC"></stop></linearGradient><text x="200" y="23" fill="url(#gradation)">DEVELOPMENT</text></svg>
+                     </span>
+                     <span class="worksContent_index_ja">
+                        受託システム開発
+                     </span>
+                  </h3>
+               </header>
+               <div class="worksContent_content">
+                  <ul class="work">
+                     <li class="work_detail">
+                        <div class="work_detail_icon">
+                           <img src="<%- $path %>common/img/icon-dev.svg" width="100" alt=""> 
+                        </div>
+                        <h3 class="work_detail_ja">
+                           顧客管理システムの構築
+                        </h3>
+                        <article class="work_detail_content">
+                           テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                        </article>
+                        <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <button role="link" >
+                              COMING SOON
+                           </button>
+                        </a>
+                     </li>
+                     <li class="work_detail">
+                        <div class="work_detail_icon">
+                           <img src="<%- $path %>common/img/icon-dev.svg" width="100" alt=""> 
+                        </div>
+                        <h3 class="work_detail_ja">
+                           帳簿システムの構築
+                        </h3>
+                        <article class="work_detail_content">
+                           テキストご支給テキストご支給テキストご支給テキストご支給テキスト
+                        </article>
+                        <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                           <button role="link" >
+                              COMING SOON
+                           </button>
+                        </a>
+                     </li>
+                  </ul>                     
+               </div>
+            </div>
          </section>
-         <!-- /// about -->      
-      </main>
-      <!-- //// BODY END -->
+         <section id="website" class="worksContent">
+           <div class="wrap">
+              <header class="worksContent_index">
+               <h3>
+                  <span class="worksContent_index_en">
+                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="400px" height="30px" text-anchor="middle" viewBox="0 0 400 30">
+                     <linearGradient id="gradation"><stop offset="0" stop-color="#0C3FFF"></stop><stop offset="1" stop-color="#8BFFAC"></stop></linearGradient><text x="200" y="23" fill="url(#gradation)">WEBSITE</text></svg>
+                  </span>
+                  <span class="worksContent_index_ja">
+                     ウェブサイト制作
+                  </span>
+               </h3>
+            </header>
+            <div class="worksContent_content">
+               <ul class="work">
+                  <li class="work_detail">
+                     <div class="work_detail_icon">
+                        <img src="<%- $path %>common/img/icon-website.svg" width="100" alt=""> 
+                     </div>
+                     <h3 class="work_detail_ja">
+                        ポータルサイト
+                     </h3>
+                      <!--                           <article class="work_detail_content">
+                         テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給テキストご支給
+                      </article> -->
+                      <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                        <button role="link" >
+                           COMING SOON
+                        </button>
+                     </a>
+                     </li>
+                     <li class="work_detail">
+                        <div class="work_detail_icon">
+                           <img src="<%- $path %>common/img/icon-website.svg" width="100" alt=""> 
+                        </div>
+                        <h3 class="work_detail_ja">
+                           ECサイト
+                        </h3>
+                           <!-- <article class="work_detail_content">
+                              テキストご支給テキストご支給テキストご支給テキストご支給テキスト
+                           </article> -->
+                           <a href="../works/#development" class="button -viewCasestudy -comingsoon">
+                              <button role="link" >
+                                 COMING SOON
+                              </button>
+                           </a>
+                        </li>
+                     </ul>                     
+                  </div>
+               </div>
+            </section>
+            <section id="line" class="worksContent -line">
+              <div class="wrap">
+                 <header class="worksContent_index">
+                  <h3>
+                     <span class="worksContent_index_en">
+                      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="400px" height="30px" text-anchor="middle" viewBox="0 0 400 30">
+                        <linearGradient id="gradation"><stop offset="0" stop-color="#0C3FFF"></stop><stop offset="1" stop-color="#8BFFAC"></stop></linearGradient><text x="200" y="23" fill="url(#gradation)">LINE ACCESSORY</text></svg>
+                     </span>
+                     <span class="worksContent_index_ja">
+                        ライン着せ替え
+                     </span>
+                  </h3>
+               </header>
+               <div class="worksContent_content">
+                  <ul class="work">
+                     <li class="work_detail">
+                        <div class="work_detail_icon">
+                           <img src="<%- $path %>common/img/works-img-nihon.jpg" width="330" alt="日本の昔 LINE着せ替え"> 
+                        </div>
+                        <h3 class="work_detail_ja">
+                           日本の昔
+                        </h3>
+                        <article class="work_detail_content">
+                        日本の昔を着せ替えにしました。寿司、芸者、ちょんまげ、忍者！ 和の雰囲気をテーマとしたデザインです。</article>
+                        <a href="https://store.line.me/themeshop/product/c3152099-0232-4c0d-87e4-ea6f412fcfa6/ja" target="_blank" class="button -viewCasestudy">
+                           <button role="link" >
+                              VIEW PROJECT
+                           </button>
+                        </a>
+                     </li>
+                     <li class="work_detail">
+                        <div class="work_detail_icon">
+                           <img src="<%- $path %>common/img/works-img-girlse.jpg" width="330" alt="Girls Emotion LINE着せ替え"> 
+                        </div>
+                        <h3 class="work_detail_ja">
+                           Girl's Emotion
+                        </h3>
+                        <article class="work_detail_content">
+                        表情豊かなかわいい女の子たちの着せ替えです。</article>
+                        <a href="https://store.line.me/themeshop/product/501a86e1-23fd-4bd8-8a62-626d7d4950ce?id=501a86e1-23fd-4bd8-8a62-626d7d4950ce" target="_blank" class="button -viewCasestudy">
+                           <button role="link" >
+                              VIEW PROJECT
+                           </button>
+                        </a>
+                     </li>
+                     <li class="work_detail">
+                        <div class="work_detail_icon">
+                           <img src="<%- $path %>common/img/works-img-kokomof.jpg" width="330" alt="ココモフ LINE着せ替え"> 
+                        </div>
+                        <h3 class="work_detail_ja">
+                           ココモフ
+                        </h3>
+                        <article class="work_detail_content">
+                           スコティッシュフォールドのココさんと、ブリティッシュショートヘアーのモフさんによるかわいい猫の着せ替えです。
+                        </article>
+                        <a href="https://store.line.me/themeshop/product/1d1ac698-e390-49d8-9a85-432293f744f1?id=1d1ac698-e390-49d8-9a85-432293f744f1" target="_blank" class="button -viewCasestudy">
+                           <button role="link" >
+                              VIEW PROJECT
+                           </button>
+                        </a>
+                     </li>                        
+                  </ul>                     
 
-      <%- include( $path + '_inc/_footer' ) %>
-      <!-- ***** menu button -->
-      <%- $parts.toggle %>
-      <!-- //// menu button -->
-      <%- include($path + '_inc/_scripts') %>
-   </body>
+               </div>
+            </div>
+         </section>
+      </section>
+      <nav class="worksNav -bottom">
+         <ul class="wrap">
+            <li class="worksNav_tab" data-tab="ses">
+               <header class="worksNav_tab_en">SES</header>
+               <div class="worksNav_tab_ja">システムエンジニアリングサービス</div>
+            </li>
+            <li class="worksNav_tab" data-tab="development">
+               <header class="worksNav_tab_en">DEVELOPMENT</header>
+               <div class="worksNav_tab_ja">受託システム開発</div>
+            </li>                  
+            <li class="worksNav_tab" data-tab="website">
+               <header class="worksNav_tab_en">WEBSITE</header>
+               <div class="worksNav_tab_ja">ウェブサイト制作</div>
+            </li>
+            <li class="worksNav_tab" data-tab="line">
+               <header class="worksNav_tab_en">LINE ACCESSORY</header>
+               <div class="worksNav_tab_ja">ライン着せ替え</div>
+            </li>                  
+         </ul>
+      </nav>            
+   </section>
+   <!-- /// works --> 
+   <section class="toEntry">
+     <div class="wrap">
+         <header class="toEntry_index">
+           <h3>システム開発、SES、ウェブサイト制作に関するご相談はこちらから</h3>
+        </header>
+        <%- include( $path + '_inc/_page-enterButton', {text: 'SESや各種製作についてお問い合わせ'}) %> 
+        <aside class="toEntry_attention">
+           メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
+           いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
+        </aside>
+     </div>
+  </section>        
+</main>
+<!-- //// BODY END -->
 
-   </html>
+<%- include( $path + '_inc/_footer' ) %>
+<!-- ***** menu button -->
+<%- $parts.toggle %>
+<!-- //// menu button -->
+<%- include($path + '_inc/_scripts') %>
+</body>
+
+</html>
