--- a/donatello.com/common/css/style.css
+++ b/donatello.com/common/css/style.css
@@ -390,6 +390,12 @@ a img:focus
 }.scrolled .siteHeader_nav li
 {
     color: #3a3a3a;
+}@media screen and (max-width: 780px)
+{
+    .scrolled .siteHeader_nav li
+    {
+        color: #fff;
+    }
 }.navOpen .scrolled .siteHeader_nav li
 {
     color: #fff;
@@ -598,8 +604,9 @@ a img:focus
 }@media screen and (max-width: 580px)
 {
     .button.-toEnter > button
-    {
-        padding-top: 25px;padding-bottom: 25px;
+    {padding-top: 25px;padding-bottom: 25px;
+
+        letter-spacing: .15em;
     }
 }.button.-viewCasestudy
 {
@@ -617,6 +624,15 @@ a img:focus
 }.button.-viewCasestudy > button
 {font-family: 'URW DIN Medium';box-sizing: border-box;
     width: 100%;padding: 15px 10px;text-align: center;letter-spacing: .15em;color: #666;background-color: #fff;
+}.button.-comingsoon,
+.button.-disabled
+{pointer-events: none;
+
+    border: none;background: none;
+}.button.-comingsoon > button,
+.button.-disabled > button
+{
+    padding: 0;color: #ddd;
 }.styleTable
 {
     width: 100%;border-collapse: collapse;
@@ -1264,52 +1280,230 @@ a img:focus
     {
         margin-bottom: 60px;
     }
+}.works .worksNav
+{
+    border-bottom: solid 1px #ccc;
+}.works .worksNav.-bottom
+{border-top: solid 1px #ccc;
+    border-bottom: none;
+}.works .worksNav .wrap
+{display: table;
+
+    width: 100%;table-layout: fixed;border-spacing: 4px 0;
+}@media screen and (max-width: 780px)
+{
+    .works .worksNav .wrap
+    {
+        display: -webkit-box                                                                                                                                                                                ;display: -webkit-flex;display: -ms-flexbox;display:         flex;flex-direction: row;-webkit-flex-wrap: wrap;-ms-flex-wrap: wrap;flex-wrap: wrap;-webkit-box-orient: horizontal;-webkit-box-direction: normal;-webkit-flex-direction: row;-ms-flex-direction: row;
+    }
+}.works .worksNav_tab
+{
+    line-height: 1;position: relative;display: table-cell;box-sizing: border-box;padding-top: 15px;padding-right: 10px;padding-bottom: 15px;padding-left: 10px;transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;transition: all .5s ease 0s;text-align: center;vertical-align: bottom;border-top: solid 1px #ccc;border-right: solid 1px #ccc;background-color: #fff;
+}@media screen and (max-width: 780px)
+{
+    .works .worksNav_tab
+    {display: block;
+
+        width: 50%;
+    }
+}.works .worksNav_tab.slick-current
+{
+    color: #aaa;border-color: #0c3fff;
+}.works .worksNav_tab:after
+{line-height: 1;position: absolute;top: -1px;bottom: 0;left: 0;display: block;width: 0;height: 100%;
+
+    content: ' ';transition: all .3s cubic-bezier(.785, .135, .15, .86) 0s;border-top: solid 1px #0c3fff;border-bottom: solid 1px #0c3fff;
+}.works .worksNav_tab:hover:after,
+.works .worksNav_tab:active:after,
+.works .worksNav_tab:focus:after
+{
+    width: 100%;
+}.works .worksNav.-bottom .worksNav_tab
+{
+    border-top: none;border-bottom: solid 1px #ccc;
+}.works .worksNav_tab_en
+{font-family: 'URW DIN Medium';font-size: 1.2125em;
+
+    margin-bottom: 10px;letter-spacing: .33em;
+}.works .worksNav_tab_ja
+{
+    font-size: .85714em;font-weight: 600;
 }.works .section.-works
 {
     text-align: center;
-}.works .section.-works .section_index
-{font-size: 2em;
-
-    margin-bottom: 40px;
+}.works .section.-works .worksContent
+{
+    padding-top: 90px;padding-bottom: 70px;
 }@media screen and (max-width: 580px)
 {
-    .works .section.-works .section_index
+    .works .section.-works .worksContent
+    {
+        padding-top: 40px;padding-bottom: 30px;
+    }
+}.works .section.-works .worksContent_index
+{
+    margin-bottom: 40px;text-align: center;
+}@media screen and (max-width: 580px)
+{
+    .works .section.-works .worksContent_index
     {
         margin-bottom: 30px;
     }
-}.works .section.-works .section_index_en
+}.works .section.-works .worksContent_index_en,
+.works .section.-works .worksContent_index_ja
 {
-    letter-spacing: .14em;
+    display: block;
+}.works .section.-works .worksContent_index_en
+{font-family: 'URW DIN Bold';font-size: 2em;
+    line-height: 1;margin-bottom: 10px;transition: all .5s ease 0s;letter-spacing: .14em;
+}.slick-slide .worksContent_index_en
+{-webkit-transform: translateX(20px)                            ;-ms-transform: translateX(20px);transform: translateX(20px);
+
+    opacity: 0;
+}.slick-current .worksContent_index_en
+{-webkit-transform: translateX(0px)                            ;-ms-transform: translateX(0px);transform: translateX(0px);
+
+    opacity: 1;
 }@media screen and (max-width: 580px)
 {
-    .works .section.-works .section_index_en svg
+    .works .section.-works .worksContent_index_en svg
     {
         max-width: 100%;height: auto;
     }
-}.works .section.-works .section_index_en:after
-{
-    display: none;
-}.works .section.-works .section_content p
-{line-height: 2;
-
-    letter-spacing: .14em;
+}.works .section.-works .worksContent_index_ja
+{font-size: 1.5em;font-weight: 500;transition: all .5s ease .25s;
+    letter-spacing: .33em;
 }@media screen and (max-width: 580px)
 {
-    .works .section.-works .section_content
+    .works .section.-works .worksContent_index_ja
     {
-        text-align: left;
-    }.works .section.-works .section_content br
-    {display: none;
-
-        width: 0;
+        letter-spacing: .15em;
     }
-}.works .section.-works .intro
+}.slick-slide .worksContent_index_ja
+{-webkit-transform: translateX(20px)                            ;-ms-transform: translateX(20px);transform: translateX(20px);
+
+    opacity: 0;
+}.slick-current .worksContent_index_ja
+{-webkit-transform: translateX(0px)                            ;-ms-transform: translateX(0px);transform: translateX(0px);
+
+    opacity: 1;
+}.works .section.-works .work
 {
-    font-weight: 500;margin-bottom: 40px;
+    display: -webkit-box                                                                                                                                                                ;display: -webkit-flex;display: -ms-flexbox;display:         flex;flex-direction: row;text-align: center;-webkit-flex-wrap: wrap;-ms-flex-wrap: wrap;flex-wrap: wrap;-webkit-box-orient: horizontal;-webkit-box-direction: normal;-webkit-flex-direction: row;-ms-flex-direction: row;-webkit-box-pack: justify;-webkit-justify-content: space-between;-ms-flex-pack: justify;justify-content: space-between;-webkit-box-align: stretch;-webkit-align-items: stretch;-ms-flex-align: stretch;align-items: stretch;
+}.works .section.-works .work:after
+{display: block;width: 30%;
+
+    content: ' ';
+}@media screen and (max-width: 780px)
+{
+    .works .section.-works .work
+    {
+        display: block;
+    }
+}.slick-slide .work_detail
+{-webkit-transform: translateX(10px)                            ;-ms-transform: translateX(10px);transform: translateX(10px);
+
+    opacity: 0;
+}.slick-current .work_detail
+{-webkit-transform: translateX(0px)                            ;-ms-transform: translateX(0px);transform: translateX(0px);
+
+    opacity: 1;
+}.works .section.-works .work_detail
+{display: -webkit-box;display: -webkit-flex;display: -ms-flexbox;display:         flex;flex-direction: column;
+
+    width: 30%;transition: all .3s ease 0s;-webkit-box-orient: vertical;-webkit-box-direction: normal;-webkit-flex-direction: column;-ms-flex-direction: column;
+}@media screen and (max-width: 780px)
+{
+    .works .section.-works .work_detail
+    {display: block;
+
+        width: auto;padding-right: 5%;padding-left: 5%;
+    }.works .section.-works .work_detail:not(:last-child)
+    {
+        margin-bottom: 55px;
+    }
+}.works .section.-works .work_detail:nth-child(1)
+{
+    transition-delay: .6s;
+}.works .section.-works .work_detail:nth-child(2)
+{
+    transition-delay: .85s;
+}.works .section.-works .work_detail:nth-child(3)
+{
+    transition-delay: 1.1s;
+}.works .section.-works .work_detail:nth-child(4)
+{
+    transition-delay: 1.35s;
+}.works .section.-works .work_detail:nth-child(5)
+{
+    transition-delay: 1.6s;
+}.works .section.-works .work_detail:nth-child(6)
+{
+    transition-delay: 1.85s;
+}.works .section.-works .work_detail:nth-child(7)
+{
+    transition-delay: 2.1s;
+}.works .section.-works .work_detail:nth-child(8)
+{
+    transition-delay: 2.35s;
+}.works .section.-works .work_detail:nth-child(9)
+{
+    transition-delay: 2.6s;
+}.works .section.-works .work_detail:nth-child(10)
+{
+    transition-delay: 2.85s;
+}.works .section.-works .work_detail:nth-child(11)
+{
+    transition-delay: 3.1s;
+}.works .section.-works .work_detail:nth-child(12)
+{
+    transition-delay: 3.35s;
+}.works .section.-works .work_detail_icon
+{
+    line-height: 1;margin-bottom: 30px;padding: 30px 10px;text-align: center;border: solid 1px #ccc;
+}.-works.section .worksContent.-line .work_detail_icon
+{
+    padding-right: 0;padding-left: 0;
+}.works .section.-works .work_detail_icon img
+{
+    display: inline-block;
+}@media screen and (max-width: 780px)
+{
+    .works .section.-works .work_detail_icon
+    {
+        margin-bottom: 10px;
+    }
+}.works .section.-works .work_detail_ja
+{font-weight: bold;
+
+    margin-bottom: 20px;letter-spacing: .1em;color: #0c3fff;
+}@media screen and (max-width: 780px)
+{
+    .works .section.-works .work_detail_ja
+    {
+        line-height: 1.7;margin-bottom: 10px;
+    }
+}.works .section.-works .work_detail_content
+{font-size: .85714em;
+
+    margin-bottom: 30px;text-align: left;
+}@media screen and (max-width: 780px)
+{
+    .works .section.-works .work_detail_content
+    {
+        font-size: 1em;margin-bottom: 20px;
+    }
+}.works .section.-works .work .button
+{
+    width: 250px;margin-top: auto;margin-right: auto;margin-left: auto;
+}.works .toEntry_index
+{font-weight: bold;
+
+    margin-bottom: 40px;letter-spacing: .14em;
 }@media screen and (max-width: 580px)
 {
-    .works .section.-works .intro
+    .works .toEntry_index
     {
-        margin-bottom: 20px;
+        margin-bottom: 25px;
     }
 }
