common ナビゲーションリンク設定

--- a/_dev/_ejs/_inc/_footer.ejs
+++ b/_dev/_ejs/_inc/_footer.ejs
@@ -36,7 +36,7 @@
                <nav class="siteFooter_nav">
                   <ul class="nav">
                      <li><a href="<%- $path %>/about/">会社概要</a></li>
-                     <li><a href="<%- $path %>/fields/">事業内容</a></li>
+                     <li><a href="<%- $path %>/business/">事業内容</a></li>
                      <li><a href="<%- $path %>/works/">実績</a></li>
                      <li><a href="<%- $path %>/recruit/">採用情報</a></li>
                      <li><a href="<%- $path %>/inquiry/">お問い合わせ</a></li>
@@ -46,7 +46,6 @@
             <footer class="siteFooter_copyright">
                &copy; Donatello co.ltd, All Rights Reserved.
             </footer>
-
          </div>
       </footer>         
       <div class="backToTop"><i></i></div>
