--- a/_dev/_ejs/_inc/_gnav.ejs
+++ b/_dev/_ejs/_inc/_gnav.ejs
@@ -1,5 +1,4 @@
-<% isChild == 'undefined' ? isChild = false : '';  %>
-<header class="siteHeader">
+<% isChild == 'undefined' ? isChild = false : ''; %><header class="siteHeader">
       <div class="wrap">
          <% if( isChild ){ %>
          <h1 class="siteHeader_word"><%= $keyword %></h1>
@@ -85,11 +84,11 @@
       </p>
       <nav class="siteHeader_nav">
          <ul class="nav">
-            <li><a href="<%- $path %>/about/">会社概要</a></li>
-            <li><a href="<%- $path %>/fields/">事業内容</a></li>
-            <li><a href="<%- $path %>/works/">実績</a></li>
-            <li><a href="<%- $path %>/recruit/">採用情報</a></li>
-            <li><a href="<%- $path %>/inquiry/">お問い合わせ</a></li>
+            <li<% if($active == 'about'){ %> class="current"<%}%>><a href="<%- $path %>/about/">会社概要</a></li>
+            <li<% if($active == 'business'){ %> class="current"<%}%>><a href="<%- $path %>/business/">事業内容</a></li>
+            <li<% if($active == 'works'){ %> class="current"<%}%>><a href="<%- $path %>/works/">実績</a></li>
+            <li<% if($active == 'recruit'){ %> class="current"<%}%>><a href="<%- $path %>/recruit/">採用情報</a></li>
+            <li<% if($active == 'inquiry'){ %> class="current"<%}%>><a href="<%- $path %>/inquiry/">お問い合わせ</a></li>
          </ul>
       </nav>
    </div>
