--- a/_dev/_ejs/_inc/_footer.ejs
+++ b/_dev/_ejs/_inc/_footer.ejs
@@ -35,11 +35,11 @@
             <section>
                <nav class="siteFooter_nav">
                   <ul class="nav">
-                     <li><a href="<%- $path %>/about/">会社概要</a></li>
-                     <li><a href="<%- $path %>/business/">事業内容</a></li>
-                     <li><a href="<%- $path %>/works/">実績</a></li>
-                     <li><a href="<%- $path %>/recruit/">採用情報</a></li>
-                     <li><a href="<%- $path %>/inquiry/">お問い合わせ</a></li>
+                     <li><a href="<%# $path %>/about/">会社概要</a></li>
+                     <li><a href="<%# $path %>/business/">事業内容</a></li>
+                     <li><a href="<%# $path %>/works/">実績</a></li>
+                     <li><a href="<%# $path %>/recruit/">採用情報</a></li>
+                     <li><a href="<%# $path %>/inquiry/">お問い合わせ</a></li>
                   </ul>                  
                </nav>
             </section>
