common TOP戻るボタン追加

--- a/_dev/_ejs/_inc/_footer.ejs
+++ b/_dev/_ejs/_inc/_footer.ejs
@@ -4,6 +4,7 @@
             <li><a href="https://twitter.com/donatello04" target="_blank" class="icon-twitter"></a></li>
             <li><a href="https://www.facebook.com/%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BEDonatello-1103021019747652/" target="_blank" class="icon-facebook"></a></li>
          </ul>
+         <div class="backToTop"><img src="<%- $path %>common/img/icon-arrow-backtotop.svg" width="7" alt=""></div>      
       </section>
       <!-- ///// sns -->
       <footer class="siteFooter">
@@ -48,4 +49,3 @@
             </footer>
          </div>
       </footer>         
-      <div class="backToTop"><i></i></div>
