--- a/_dev/_ejs/_inc/_head.ejs
+++ b/_dev/_ejs/_inc/_head.ejs
@@ -4,15 +4,9 @@
       <!-- ***** my style -->
       <link rel="stylesheet" type="text/css" href="<%- $path %>common/css/nomalize.css">
      <link rel="stylesheet" type="text/css" href="<%- $path %>common/css/style.css">      
-      <%
-            if( $css ){
-            $css.forEach( function( current, index ){
-       %>
+      <% if( $css ){ $css.forEach( function( current, index ){ %>
       <link rel="stylesheet" type="text/css" href="<%- current %>">
-       <%           
-            });
-            }
-      %>
+       <% }); } %>
       <!-- ///// my style -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
       <!--[ if lte IE 8]>
@@ -33,4 +27,4 @@
       <meta name="twitter:title" content="<%- $meta.twitter.title %>">
       <meta name="twitter:description" content="<%- $meta.twitter.description %>">
       <meta name="twitter:image" content="<%- $meta.twitter.image %>">
-      <link rel="shortcut icon" href=""> 
+      <link rel="shortcut icon" href="">
