--- a/_dev/_ejs/index.ejs
+++ b/_dev/_ejs/index.ejs
@@ -70,6 +70,7 @@ $scripts=null;
                業務効率化・属人的ミスを軽減するための<br class="spShow">最適なシステムを提案いたします。
             </p>
          </div>
+         <canvas class="pattern"></canvas>
       </section>
       <!-- ***** BODY START -->
       <main class="main">
