--- a/_dev/_ejs/index.ejs
+++ b/_dev/_ejs/index.ejs
@@ -35,7 +35,7 @@ $scripts=null;
                   <h2 class="mainvisual_copy_ja">未来を拓くエンジニアスキル</h2>
                </div>
             </div>
-            <canvas class="mainvisual_graphic">
+            <canvas class="mainvisual_graphic"></canvas>
          </section>
          <!-- ///// mainvisual  -->
          <section class="topics">
@@ -63,7 +63,7 @@ $scripts=null;
                <header class="introduction_index ef ef-dup">
                   <h3>"DEVELOP FOR THE FURUTE."</h3>
                </header>
-               <p class="introduction_content ef ef-floatup" data-delay='0.2' >
+               <p class="introduction_content">
                   私たち、株式会社Donatelloは、<br>お客様の業務を分析し、<br class="spShow">受託システム開発・SESを通じ<br>
                   業務効率化・属人的ミスを軽減するための<br class="spShow">最適なシステムを提案いたします。
                </p>
