--- a/_dev/_ejs/_inc/_gnav.ejs
+++ b/_dev/_ejs/_inc/_gnav.ejs
@@ -4,7 +4,7 @@
          <h1 class="siteHeader_word"><%= $keyword %></h1>
          <% } %>
          <p class="siteHeader_logo">
-            <a href="<%- $path %>">
+            <a href="/">
                <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="150px" height="20px" viewBox="0 0 150 20" enable-background="new 0 0 150 20" xml:space="preserve">
                   <g>
                      <g>
