--- a/_dev/_ejs/_inc/_page-headingArea.ejs
+++ b/_dev/_ejs/_inc/_page-headingArea.ejs
@@ -8,6 +8,6 @@
          <h2 class="headingArea_copy_ja"><%- copy.ja %></h2>
       </div>
    </div>
-   <canvas class="pattern">
+   <canvas class="pattern"></canvas>
 </section>
 <!-- ///// mainvisual  -->
