--- a/donatello.com/common/scss/_module-pages.scss
+++ b/donatello.com/common/scss/_module-pages.scss
@@ -21,10 +21,23 @@
 	
 	.wrap{
 	}
+
+	canvas{
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		z-index: 0;
+		opacity: 0.15;
+		mix-blend-mode: overlay;
+	}
 	
 	&_copy{
 		padding-top: 100px;
 		padding-bottom: 100px;
+		position: relative;
+		z-index: 1;
 		text-shadow: 0 0 10px #666;		
 		vertical-align: middle;
 		font-size: $xlarge;
