--- a/donatello.com/common/scss/_animations.scss
+++ b/donatello.com/common/scss/_animations.scss
@@ -7,3 +7,19 @@
 //////////////////////////////////////////
 
 
+@keyframes floatRL {
+	0%{ 
+		right: -20%;
+	}
+	100%{ 
+		right: 120%;
+	}
+}
+@keyframes floatLR {
+	0%{ 
+		right: 120%;
+	}
+	100%{ 
+		right: -20%;
+	}
+}
