--- a/donatello.com/common/scss/_modules.scss
+++ b/donatello.com/common/scss/_modules.scss
@@ -788,7 +788,63 @@ body:before{
 
 ////////////////////
 
+#loadingAnim{
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	z-index: 11;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	transition: transition(0.5s);
+	transition-delay: 2s;	
+	background-color: $blue;
+	overflow: hidden;
+	
+	svg{
+		width: 110px;
+		height: 100px;
+		fill: none;
+		stroke: #fff;
+		stroke-width: 2px;	
+		transition: transition();
+	    transform: rotate(-30deg);			
+	}
+	
+	.loadingAnim_path{
+		display: block;
+	}
 
+	.loadingAnim_circle{
+		transition: transition();		
+		fill : $green;
+	}
+}
+
+.isLoaded{
+	#loadingAnim{
+		top: -10%;
+		height: 0;
+		background-color: lighten( $blue, 50% );
+		
+		.loadingAnim_circle{
+			opacity: 0;
+		}
+		svg{
+			stroke-dasharray: -800px;
+		}
+	}
+}
+.loadingEnd{
+	// #loadingAnim{;
+	// 	display: none;
+	// }
+}
 
 
 
